--- a/initiatives.html
+++ b/initiatives.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Initiatives - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>Initiatives - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -238,7 +238,7 @@
                     <h2 class="text-3xl md:text-4xl font-oswald font-bold text-primary mb-6">Diversity & Gender Equality</h2>
                     <div class="w-24 h-1 bg-primary mb-6"></div>
                     <p class="text-lg text-base-content mb-6">
-                        Considerable rewards can be attained by businesses which successfully attract both women and men to their workforce. As Dyna-K reaches out to attract and retain global customers, the company acknowledges that a diverse workforce is essential to its continued competitiveness and innovation. While diversity is fundamental, gender equality is paramount at Dyna-K Automotive Stamping Pvt. Ltd. Gender equality is achieved when people are able to access and enjoy the same rewards, resources and opportunities regardless of their gender. As systems and internal processes evolve, more women are willing to explore opportunities on the shop floor apart from just the corporate functions and Dyna-K is focused on moving forward on this journey.
+                        Considerable rewards can be attained by businesses which successfully attract both women and men to their workforce. As Dyna-K reaches out to attract and retain global customers, the company acknowledges that a diverse workforce is essential to its continued competitiveness and innovation. While diversity is fundamental, gender equality is paramount at Dyna-K Automotive Stampings Private Limited Gender equality is achieved when people are able to access and enjoy the same rewards, resources and opportunities regardless of their gender. As systems and internal processes evolve, more women are willing to explore opportunities on the shop floor apart from just the corporate functions and Dyna-K is focused on moving forward on this journey.
                     </p>
                     <p class="text-lg text-base-content mb-6">
                         Fostering a workforce that promotes this initiative the organization has been able to,
@@ -287,7 +287,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div>
                     <p class="text-lg text-base-content mb-6">
-                        At Dyna-K Automotive Stamping Pvt. Ltd, our long-term success depends upon ensuring the safety of our workers, visitors and our operations.
+                        At Dyna-K Automotive Stampings Private Limited, our long-term success depends upon ensuring the safety of our workers, visitors and our operations.
                     </p>
                     <p class="text-lg text-base-content mb-6">
                         We believe that a safe and healthy workplace is a fundamental right of every person and also a business imperative. Our Health & Safety Initiative requires that we take responsibility for maintaining a productive workplace in every part of our Company by minimizing the risk of accidents, injury and exposure to health hazards for all of our employees.
@@ -312,13 +312,13 @@
                 <img src="images/environmental-icons.png" alt="Environmental Icons" class="max-w-xs h-auto mx-auto md:mx-0">
                 <div>
                     <p class="text-lg text-base-content mb-6">
-                        Dyna-K Automotive Stamping Pvt. Ltd strives to preserve and uphold natural resources and reduce the environmental impact of its products and services throughout their lifecycle in order to be a responsible corporate citizen.
+                        Dyna-K Automotive Stampings Private Limited strives to preserve and uphold natural resources and reduce the environmental impact of its products and services throughout their lifecycle in order to be a responsible corporate citizen.
                     </p>
                     <p class="text-lg text-base-content mb-6">
                         The guiding principle for our environmental initiatives is the 5R's: Reduce, Reuse, Recycle, Renew and Respect.
                     </p>
                     <p class="text-lg text-base-content mb-6">
-                        Dyna-K Automotive Stamping Pvt. Ltd  strives to develop and promote processes and newer technologies to make all our products and services environmentally responsible. Employees, the supply chain and other stakeholders are sensitized through personal interactions and other channels of effective communication. Initiatives can be measured through resource savings in all cases.
+                        Dyna-K Automotive Stampings Private Limited  strives to develop and promote processes and newer technologies to make all our products and services environmentally responsible. Employees, the supply chain and other stakeholders are sensitized through personal interactions and other channels of effective communication. Initiatives can be measured through resource savings in all cases.
                     </p>
                     <p class="text-lg text-base-content">
                         The company aims to engage with government and non-government agencies to promote conservation.
@@ -338,10 +338,10 @@
                     Innovation is often associated with the introduction of new products or services in your business; however, it can also be about changing the way you do business.
                 </p>
                 <p class="text-lg text-base-content mb-6">
-                    At Dyna-K Automotive Stamping Pvt. Ltd, innovation embraces new uses of technologies, improved industry methods, meeting changing customer demands or needs, and better systems and processes.
+                    At Dyna-K Automotive Stampings Private Limited, innovation embraces new uses of technologies, improved industry methods, meeting changing customer demands or needs, and better systems and processes.
                 </p>
                 <p class="text-lg text-base-content">
-                    Focus on innovation at Dyna-K Automotive Stamping Pvt. Ltd, ensures everyone is working towards better business practices and improving business efficiency and performance.
+                    Focus on innovation at Dyna-K Automotive Stampings Private Limited, ensures everyone is working towards better business practices and improving business efficiency and performance.
                 </p>
             </div>
         </div>
@@ -354,7 +354,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-white">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
@@ -421,7 +421,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited All rights reserved.</p>
             </div>
         </div>
     </footer>
