--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from dynakstamp.com/products.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 05 Dec 2020 07:16:58 GMT -->
 <head>
-<title>Products - Dyna-K Automotive Stamping Pvt. Ltd</title>
+<title>Products - Dyna-K Automotive Stampings Private Limited</title>
 <link rel="icon" type="image/png" href="favicaon.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -329,7 +329,7 @@
                     <h2 class="section-title">Quality Assurance</h2>
                     <div class="section-title-bar bg-primary"></div>
                     <p class="text-lg text-dyna-neutral mb-6">
-                        At Dyna-K Automotive Stamping Pvt. Ltd, quality is embedded in every step of our manufacturing process. Our rigorous quality control procedures ensure that every product that leaves our facility meets the highest standards of excellence.
+                        At Dyna-K Automotive Stampings Private Limited, quality is embedded in every step of our manufacturing process. Our rigorous quality control procedures ensure that every product that leaves our facility meets the highest standards of excellence.
                     </p>
                     <p class="text-lg text-dyna-neutral mb-8">
                         We are IATF16949:2016 certified, and our products undergo comprehensive testing and inspection to ensure reliability, durability, and performance that exceeds industry standards.
@@ -401,7 +401,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 ">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
@@ -467,7 +467,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited. All rights reserved.</p>
             </div>
         </div>
     </footer>
