--- a/vision-quality-policy.html
+++ b/vision-quality-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vision & Quality Policy - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>Vision & Quality Policy - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -297,7 +297,7 @@
                         <i class="fa fa-certificate"></i>
                     </div>
                     <p class="text-lg text-base-content mb-4 text-center italic">
-                        "At Dyna-K Automotive Stamping Pvt. Ltd, we are committed to delivering products of the highest quality that meet or exceed customer requirements and comply with all applicable standards and regulations."
+                        "At Dyna-K Automotive Stampings Private Limited, we are committed to delivering products of the highest quality that meet or exceed customer requirements and comply with all applicable standards and regulations."
                     </p>
 </div>
 
@@ -430,7 +430,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-white">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
@@ -497,7 +497,7 @@
                 </div>
     </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited  All rights reserved.</p>
 </div>
         </div>
     </footer>
