--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>About Us - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -239,7 +239,7 @@
                 <div>
                     <h2 class="text-3xl md:text-4xl font-oswald font-bold text-white mb-4">Our Story</h2>
                     <div class="w-24 h-1 bg-secondary mb-6"></div>
-                    <p class="text-lg text-base-content mb-6">Dyna-K Automotive Stamping Pvt. Ltd has been at the forefront of automotive component manufacturing for over two decades. Our commitment to quality, innovation, and customer satisfaction has made us a trusted partner for leading automotive manufacturers worldwide.</p>
+                    <p class="text-lg text-base-content mb-6">Dyna-K Automotive Stampings Private Limited has been at the forefront of automotive component manufacturing for over two decades. Our commitment to quality, innovation, and customer satisfaction has made us a trusted partner for leading automotive manufacturers worldwide.</p>
                     <p class="text-lg text-base-content mb-8">With state-of-the-art facilities and a team of skilled professionals, we deliver precision-engineered components that meet the highest industry standards.</p>
                     <div class="grid grid-cols-2 gap-6">
                         <div class="stats shadow bg-base-100 transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
@@ -284,7 +284,7 @@
                     <div class="relative flex items-center">
                         <div class="w-1/2 pr-12 md:pr-16 text-right">
                             <h3 class="text-2xl font-oswald text-white font-bold">2004</h3>
-                            <p class="mt-2">Dyna-K Automotive Stamping Pvt. Ltd was founded with a vision to deliver excellence in automotive components.</p>
+                            <p class="mt-2">Dyna-K Automotive Stampings Private Limited was founded with a vision to deliver excellence in automotive components.</p>
                         </div>
                         <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 rounded-full bg-primary border-4 border-base-200 z-10"></div>
                         <div class="w-1/2 pl-12 md:pl-16"></div>
@@ -426,7 +426,7 @@
                         About Us
                         <span class="absolute bottom-0 left-0 w-full h-0.5 bg-secondary/50"></span>
                     </h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
