--- a/business-enquiry.html
+++ b/business-enquiry.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Enquiry - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>Business Enquiry - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -245,7 +245,7 @@
         <div class="container mx-auto px-4 relative z-10">
             <div class="max-w-3xl mx-auto text-center">
                 <div class="inline-block mb-4 bg-white/10 px-6 py-2 rounded-full backdrop-blur-sm">
-                    <span class=" font-medium">Dyna-K Automotive Stamping Pvt. Ltd</span>
+                    <span class=" font-medium">Dyna-K Automotive Stampings Private Limited</span>
                 </div>
                 <h1 class="text-4xl md:text-5xl font-oswald font-bold mb-6">Business Enquiry</h1>
                 <p class="text-xl text-white/90 mb-6">Connect with us to discuss your business requirements and explore our precision automotive solutions</p>
@@ -464,7 +464,7 @@
                     <h3 class="text-xl font-oswald font-bold mb-6  relative inline-block">
                         About Us
                     </h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
