--- a/career.html
+++ b/career.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Careers - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>Careers - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -504,7 +504,7 @@
                         </p>
                         
                         <p class="text-base-content mb-4">
-                            Dyna-K Automotive Stamping Pvt. Ltd being a mix diversity employer is looking for Young Engineers and Management graduates to support a gender balanced work force, who can take up these challenges and contribute in its rapid growth in different disciplines.
+                            Dyna-K Automotive Stampings Private Limited being a mix diversity employer is looking for Young Engineers and Management graduates to support a gender balanced work force, who can take up these challenges and contribute in its rapid growth in different disciplines.
                         </p>
                         
                         <p class="text-base-content">
@@ -667,7 +667,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-white">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
@@ -734,7 +734,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited. All rights reserved.</p>
             </div>
         </div>
     </footer>
