--- a/certification.html
+++ b/certification.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certification - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>Certification - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -264,7 +264,7 @@
                         <div class="md:col-span-2">
                             <h3 class="text-2xl font-oswald font-bold text-primary mb-4">ISO 14001:2015</h3>
                             <div class="space-y-4">
-                                <p class="text-base-content">Management system as per ISO 14001:2015. In accordance with TUV INDIA procedures, it is hereby certified that Dyna-K Automotive Stamping Pvt. Ltd PVT. LTD.</p>
+                                <p class="text-base-content">Management system as per ISO 14001:2015. In accordance with TUV INDIA procedures, it is hereby certified that Dyna-K Automotive Stampings Private Limited</p>
                                 
                                 <div class="space-y-3">
                                     <div class="flex items-start">
@@ -351,7 +351,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-white">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
@@ -418,7 +418,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited All rights reserved.</p>
             </div>
         </div>
     </footer>
