--- a/company-profile.html
+++ b/company-profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Company Profile - Dyna-K Automotive Stamping Pvt. Ltd</title>
+<title>Company Profile - Dyna-K Automotive Stampings Private Limited</title>
     <link rel="icon" type="image/png" href="favicaon.png">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -489,9 +489,9 @@
                 <div>
                     <h2 class="text-3xl md:text-4xl font-oswald font-bold text-primary mb-6">About</h2>
                     <div class="w-24 h-1 bg-primary mb-6"></div>
-                    <p class="text-lg text-base-content mb-6">Dyna-K Automotive Stamping Pvt. Ltd  was founded in December 1985, to cater to the requirements of <strong>precision stampings & pressed components</strong> for the automotive industry. Over the years, Dyna-K Automotive Stamping Pvt. Ltd  capitalized on its tool design capability to cater to added automotive requirements and safety requirements of stampings for Brake components, Chassis Parts, Engine Parts, Emission Parts, Filtration Parts, Passive Safety Components, Turbo Charger Parts, Welded Assemblies Parts etc.</p>
+                    <p class="text-lg text-base-content mb-6">Dyna-K Automotive Stampings Private Limited was founded in December 1985, to cater to the requirements of <strong>precision stampings & pressed components</strong> for the automotive industry. Over the years, Dyna-K Automotive Stampings Private Limited capitalized on its tool design capability to cater to added automotive requirements and safety requirements of stampings for Brake components, Chassis Parts, Engine Parts, Emission Parts, Filtration Parts, Passive Safety Components, Turbo Charger Parts, Welded Assemblies Parts etc.</p>
                     <p class="text-lg text-base-content mb-6">Since commencing operation, Dyna-K has achieved many milestones and emerged as one of the preferred suppliers. Our partnership as a supplier commences from the early tool design stage to production and supply. With robust manufacturing driven by TQM, Lean practices and required investment in technology we have built strategic partnerships with Suppliers.</p>
-                    <p class="text-lg text-base-content mb-6">Dyna-K Automotive Stamping Pvt. Ltd  is equipped with a stamping & assembly facility which is spread in 2 plants with an approx. 55,000 sq. ft. area of workshops in Pune MIDC Industrial Area. Coupled with in-house tool design & manufacturing, Dyna-K Automotive Stamping Pvt. Ltd  is a <strong><a href="vision-quality-policy.html" class="text-primary ">IATF 16949 Certified Quality Organisation</a></strong> and geared to meet and exceed its customer expectations.</p>
+                    <p class="text-lg text-base-content mb-6">Dyna-K Automotive Stampings Private Limited is equipped with a stamping & assembly facility which is spread in 2 plants with an approx. 55,000 sq. ft. area of workshops in Pune MIDC Industrial Area. Coupled with in-house tool design & manufacturing, Dyna-K Automotive Stampings Private Limited is a <strong><a href="vision-quality-policy.html" class="text-primary ">IATF 16949 Certified Quality Organisation</a></strong> and geared to meet and exceed its customer expectations.</p>
                     <div class="stats stats-vertical shadow w-full bg-white">
                         <div class="stat">
                             <div class="stat-title">Years of Experience</div>
@@ -728,7 +728,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-white">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
@@ -795,7 +795,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited All rights reserved.</p>
             </div>
         </div>
     </footer>
