--- a/facilities.html
+++ b/facilities.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facilities - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>Facilities - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -232,7 +232,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                 <div class="bg-white rounded-xl shadow-xl p-8">
                     <h3 class="text-2xl font-oswald font-bold text-primary mb-4">Press Capacity</h3>
-                    <p class="text-base-content mb-4">Dyna-K Automotive Stamping Pvt. Ltd. maintains Mechanical/Hydraulic Presses of a capacity of 250 to 6500 KN with 50 Presses at Facility 1(J6) and 10 Presses at Facility 2 (J450). The fleet of progressive presses offer the best in quality and speed.</p>
+                    <p class="text-base-content mb-4">Dyna-K Automotive Stampings Private Limited. maintains Mechanical/Hydraulic Presses of a capacity of 250 to 6500 KN with 50 Presses at Facility 1(J6) and 10 Presses at Facility 2 (J450). The fleet of progressive presses offer the best in quality and speed.</p>
                     <p class="text-base-content mb-4">We are constantly upgrading our equipment to meet the current demands of the stamping industry as well as continually training our employees and machine operators in the latest manufacturing technologies.</p>
                     <p class="text-base-content">Keeping up with our ever-growing customer base needs, we are expanding and have acquired an additional + 28000 sq. ft. as well.</p>
   </div>
@@ -300,7 +300,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                 <div class="bg-white rounded-xl shadow-xl p-8">
                     <h3 class="text-2xl font-oswald font-bold text-primary mb-4">Advanced Tooling</h3>
-                    <p class="text-base-content mb-4">The High Quality Single Stage & Progressive Tools make Dyna-K Automotive Stamping Pvt. Ltd one of the best precision stamping companies in India.</p>
+                    <p class="text-base-content mb-4">The High Quality Single Stage & Progressive Tools make Dyna-K Automotive Stampings Private Limited one of the best precision stamping companies in India.</p>
                     <p class="text-base-content mb-4">The Product development process is supported by an in-house Tool Design team & Tool Manufacturing facility, monitored by a cross-functional APQP (Advance Product Quality Planning) team and also supported by FMEA/MSA/SPC activities.</p>
                     <p class="text-base-content">After reviewing customer needs, the team focuses on process excellence, innovation and validation transposing customer data of many forms into articulate designs.</p>
                 </div>
@@ -356,7 +356,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                 <div class="bg-white rounded-xl shadow-xl p-8">
                     <h3 class="text-2xl font-oswald font-bold text-primary mb-4">Quality Assurance</h3>
-                    <p class="text-base-content mb-4">Dyna-K Automotive Stamping Pvt. Ltd  customers are world leaders in their respective fields & technologies and are demanding in the areas of Cost, Quality & Service. These demands are consistently met by our IATF 16949 Quality System; our People Development System and our in-house Continuous Improvement Programs.</p>
+                    <p class="text-base-content mb-4">Dyna-K Automotive Stampings Private Limited  customers are world leaders in their respective fields & technologies and are demanding in the areas of Cost, Quality & Service. These demands are consistently met by our IATF 16949 Quality System; our People Development System and our in-house Continuous Improvement Programs.</p>
                     <p class="text-base-content">The quality and the reliability of the products are accurately tested and monitored by the following tools and processes.</p>
                 </div>
                 <div class="bg-white rounded-xl shadow-xl p-8">
@@ -454,7 +454,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-white">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
@@ -521,7 +521,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited. All rights reserved.</p>
             </div>
         </div>
     </footer>
