--- a/index-2.html
+++ b/index-2.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from dynakstamp.com/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 05 Dec 2020 07:14:59 GMT -->
 <head>
-<title>Dyna-K Automotive Stamping Pvt. Ltd</title>
+<title>Dyna-K Automotive Stampings Private Limited</title>
 <link rel="icon" type="image/png" href="favicaon.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -284,7 +284,7 @@
                     <h2 class="section-title text-left">About Dyna-K</h2>
                     <div class="section-title-bar mb-8"></div>
                     <p class="text-lg text-dyna-neutral mb-6">
-                        Founded in 1985, Dyna-K Automotive Stamping Pvt. Ltd has grown to become a leading manufacturer of precision automotive components. Our commitment to quality, innovation, and customer satisfaction has made us a preferred supplier to major automotive manufacturers worldwide.
+                        Founded in 1985, Dyna-K Automotive Stampings Private Limited has grown to become a leading manufacturer of precision automotive components. Our commitment to quality, innovation, and customer satisfaction has made us a preferred supplier to major automotive manufacturers worldwide.
                     </p>
                     <div class="grid grid-cols-2 gap-6">
                         <div class="text-center">
@@ -322,7 +322,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-dyna-secondary">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm btn-secondary">
                             <i class="fa fa-facebook"></i>
@@ -390,7 +390,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited. All rights reserved.</p>
             </div>
         </div>
     </footer>
