--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from dynakstamp.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 05 Dec 2020 07:12:00 GMT -->
 <head>
-<title>Welcome to Dyna-K Automotive Stamping Pvt. Ltd</title>
+<title>Welcome to Dyna-K Automotive Stampings Private Limited</title>
 <link rel="icon" type="image/png" href="favicaon.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -590,7 +590,7 @@
             <div class="bg-white/90 backdrop-blur-sm p-8 md:p-12 rounded-lg shadow-xl max-w-4xl mx-auto">
                 <h2 class="text-3xl md:text-4xl font-oswald font-bold text-primary mb-4">Precision Engineering Excellence</h2>
                 <div class="w-24 h-1 bg-primary mb-6"></div>
-                <p class="text-lg text-base-content mb-6">At Dyna-K Automotive Stamping Pvt. Ltd, we specialize in precision engineering of complex sheet metal and pressed components. With decades of experience, we deliver products of exceptional quality that consistently meet and exceed industry standards.</p>
+                <p class="text-lg text-base-content mb-6">At Dyna-K Automotive Stampings Private Limited, we specialize in precision engineering of complex sheet metal and pressed components. With decades of experience, we deliver products of exceptional quality that consistently meet and exceed industry standards.</p>
                 <p class="text-lg text-base-content mb-8">Our state-of-the-art facilities and expert team ensure that each component is manufactured with precision and care, making us a trusted partner for automotive manufacturers worldwide.</p>
                 <div class="flex flex-wrap gap-4">
                     <a href="company-profile.html" class="btn btn-primary">Company Profile</a>
@@ -687,7 +687,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-xl font-oswald font-bold mb-6 text-white">About Us</h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm">
                             <i class="fa fa-facebook"></i>
@@ -755,7 +755,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-10 pt-8 text-center text-gray-400">
-                <p>&copy; 2025 Dyna-K Automotive Stamping Pvt. Ltd. All rights reserved.</p>
+                <p>&copy; 2025 Dyna-K Automotive Stampings Private Limited. All rights reserved.</p>
             </div>
         </div>
     </footer>
