--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Dyna-K Automotive Stamping Pvt. Ltd</title>
+    <title>Privacy Policy - Dyna-K Automotive Stampings Private Limited</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -236,7 +236,7 @@
                         Introduction
                         <span class="absolute bottom-0 left-0 w-full h-0.5 bg-primary"></span>
                     </h2>
-                    <p class="text-base-content/80 mb-6">Dyna-K Automotive Stamping Pvt. Ltd ("we," "our," or "us") respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, use our services, or communicate with us.</p>
+                    <p class="text-base-content/80 mb-6">Dyna-K Automotive Stampings Private Limited ("we," "our," or "us") respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, use our services, or communicate with us.</p>
                     <p class="text-base-content/80 mb-6">We encourage you to read this Privacy Policy carefully to understand our practices regarding your personal information. By accessing or using our services, you acknowledge that you have read and understood this Privacy Policy.</p>
                     
                     <h2 class="text-2xl md:text-3xl font-oswald font-bold text-primary mb-6 mt-10 relative inline-block">
@@ -405,7 +405,7 @@
                     <div class="bg-base-200 p-6 rounded-lg mb-6 shadow-lg border border-secondary/20">
                         <div class="flex items-start mb-2">
                             <i class="fa fa-building text-primary mt-1 mr-3"></i>
-                            <p class="text-base-content/80"><strong>Dyna-K Automotive Stamping Pvt. Ltd</strong></p>
+                            <p class="text-base-content/80"><strong>Dyna-K Automotive Stampings Private Limited</strong></p>
                         </div>
                         <div class="flex items-start mb-2">
                             <i class="fa fa-map-marker text-primary mt-1 mr-3"></i>
@@ -438,7 +438,7 @@
                         About Us
                         <span class="absolute bottom-0 left-0 w-full h-0.5"></span>
                     </h3>
-                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stamping Pvt. Ltd is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
+                    <p class="text-gray-300 mb-4">Dyna-K Automotive Stampings Private Limited is a leading manufacturer of precision automotive components with a commitment to quality and innovation.</p>
                     <div class="flex space-x-4 mt-6">
                         <a href="#" class="btn btn-circle btn-sm ">
                             <i class="fa fa-facebook"></i>
